# M2P2

./: README.md
dataset_processing_scripts/: bag_chunker.py  download_dataset.py
dataset_processing_scripts/rosbag_patcher/: create_ch_template.py  patch_rosbags.py  tf_static.yaml
dataset_processing_scripts/rosbag_patcher/calib/: wfov_i-camchain_2.yaml
dataset_processing_scripts/rosbag_patcher/connection_headers/: cam_info_ch.yaml  tf_static_ch.yaml
sensor_suite/: .gitignore
sensor_suite/sensor_suite_description/: CMakeLists.txt  package.xml
sensor_suite/sensor_suite_description/launch/: view_urdf.launch  view_urdf_husky.launch
sensor_suite/sensor_suite_description/meshes/: event_camera.stl  ir_camera.stl  sensor_suite.mtl
sensor_suite/sensor_suite_description/rviz/: depthanything.rviz  navigation_move_base.rviz  sara.rviz  sara_2.rviz  urdf_config.rviz
sensor_suite/sensor_suite_description/urdf/: sensor_suite_all.urdf.xacro  sensor_suite_all_calibrated.urdf.xacro  sensor_suite_move_base.urdf.xacro  sensor_suite_move_base_calibrated.urdf.xacro
sensor_suite/sensor_suite_launch/: CMakeLists.txt  LICENSE  package.xml
sensor_suite/sensor_suite_launch/launch/: move_base_navigation_sensor_suite.launch  sensor_suite_all.launch  sensor_suite_husky.launch
sensor_suite/sensor_suite_launch/scripts/: lidar_configurator.py
