<?xml version="1.0"?>
<package format="2">
  <name>sensor_suite_description</name>
  <version>0.0.1</version>
  <description>URDF descriptions for sensor suite</description>

  <maintainer email="placeholder@gmu.edu">Robotixx</maintainer>

  <license>Placeholder</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
